@@ -1,3 +1,12 @@
+2001-07-30  Alex Graveley  <alex@ximian.com>
+
+	* src/soup-core/soup-socket.c (soup_address_new_cb): Fix dangling
+	pointer error where a resolved SoupAddress is passed to the callback,
+	and then realloc'd.
+
+	* src/soup-core/soup-headers.c (soup_headers_parse_response):
+	Don't require gchar const **status_phrase.
+
 2001-07-29  Alex Graveley  <alex@ximian.com>
 
 	* src/soup-core/soup-apache.c (soup_apache_message_create): strdup
